--- a/verb_01.html
+++ b/verb_01.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Interactive Verb: 01</title>
-        <link href="css/verb_01.css" type="text/css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="content">
-            <div class="shape"></div>
-        </div>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>CSS Keyframe Animation</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
+  <link href="css/verb_01.css" type="text/css" rel="stylesheet" />
+</head>
+<body> 
+  <div class="content">
+    <div class="shape variation-1">
+    </div>
+    <div class="shape variation-2">
+    </div>    
+    <div class="shape variation-3">
+    </div>    
+  </div>
+</body>
 </html>
