--- a/verb_03.html
+++ b/verb_03.html
@@ -7,7 +7,7 @@
         <link href="css/verb_03.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
-        <div class="content">
+        <div class= " content shape">
         </div>
         <script type="text/javascript" src="js/verb_03.js"></script>
     </body>
