--- a/verb_02.html
+++ b/verb_02.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Interactive Verb: 02</title>
-        <link href="css/verb_02.css" type="text/css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="content">
-        </div>
-        <script type="text/javascript" src="js/verb_02.js"></script>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>CSS Keyframe Animation</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
+  <link href="css/verb_02.css" type="text/css" rel="stylesheet" />
+</head>
+<body> 
+  <div class="content">
+    <div class="shape variation-1">
+    </div>
+    <div class="shape variation-2">
+    </div>    
+    <div class="shape variation-3">
+    </div>  
+    <div class="shape variation-4">
+    </div>    
+    <div class="shape variation-5">
+    </div>      
+  </div>
+  <script type="text/javascript" src="js/verb_02.js"></script>
+</body>
 </html>
